[tool.poetry]
name = "cve-analysis"
version = "0.1.0"
description = ""
authors = ["Jace Robinson <jacerobinson21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.2"}
numpy = "^2.1.2"
sqlalchemy = "^2.0.35"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
